--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,15 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         SNMP-APCUPS
-version:      0.01
+version:      0.02
 version_from: lib/SNMP/APCUPS.pm
 installdirs:  site
 requires:
     DateTime:                      0
+    Net::Ping:                     0
     SNMP:                          0
+    Socket:                        0
     Test::More:                    0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.21
+generated_by: ExtUtils::MakeMaker version 6.20
